--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1718,7 +1718,7 @@
 /* Wrappers */
 
 	#header-wrapper {
-		background: url("images/bg01.png"), url("../../images/fireworks.png");
+		background: url("images/bg01.png"), url("../../images/vball-web.png");
 		background-position: top left, center center;
 		background-size: auto, cover;
 	}
