--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="inner">
 
     <!-- Logo -->
-      <h1><a href="index.html" id="logo"><span class="claremont">Claremont</span> Volleyball</a></h1>
+      <h1><a href="/" id="logo"><span class="claremont">Claremont</span> Volleyball</a></h1>
 
     <!-- Nav -->
       <nav id="nav">
