--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,35 +11,19 @@
           <li>
             <a href="#">Men's</a>
             <ul>
-              <li><a href="#">Men's</a></li>
-              <li><a href="#">Women's</a></li>
-              <li>
-                <a href="#">Phasellus consequat</a>
-                <ul>
-                  <li><a href="#">Lorem ipsum dolor</a></li>
-                  <li><a href="#">Phasellus consequat</a></li>
-                  <li><a href="#">Magna phasellus</a></li>
-                  <li><a href="#">Etiam dolore nisl</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Veroeros feugiat</a></li>
+              <li><a href="/mens">Home</a></li>
+              <li><a href="#">Roster</a></li>
+              <li><a href="#">Schedule</a></li>
+              <li><a href="#">Announcement</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Women's</a>
             <ul>
-              <li><a href="#">Men's</a></li>
-              <li><a href="#">Women's</a></li>
-              <li>
-                <a href="#">Phasellus consequat</a>
-                <ul>
-                  <li><a href="#">Lorem ipsum dolor</a></li>
-                  <li><a href="#">Phasellus consequat</a></li>
-                  <li><a href="#">Magna phasellus</a></li>
-                  <li><a href="#">Etiam dolore nisl</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Veroeros feugiat</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Roster</a></li>
+              <li><a href="#">Schedule</a></li>
+              <li><a href="#">Announcement</a></li>
             </ul>
           </li>
           <li><a href="left-sidebar.html">Calendar</a></li>
