--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
-<script src="/assets/js/jquery-2.2.0.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 <script src="/assets/js/jquery.dropotron.min.js"></script>
 <script src="/assets/js/skel.min.js"></script>
 <script src="/assets/js/skel-viewport.min.js"></script>
