--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,19 +4,11 @@
 
       <!-- Links -->
         <section>
-          <h2>Filler Links</h2>
+          <h2>Links</h2>
           <ul class="divided">
-            <li><a href="#">Quam turpis feugiat dolor</a></li>
-            <li><a href="#">Amet ornare in hendrerit </a></li>
-            <li><a href="#">Semper mod quisturpis nisi</a></li>
-            <li><a href="#">Consequat etiam phasellus</a></li>
-            <li><a href="#">Amet turpis, feugiat et</a></li>
-            <li><a href="#">Ornare hendrerit lectus</a></li>
-            <li><a href="#">Semper mod quis et dolore</a></li>
-            <li><a href="#">Amet ornare in hendrerit</a></li>
-            <li><a href="#">Consequat lorem phasellus</a></li>
-            <li><a href="#">Amet turpis, feugiat amet</a></li>
-            <li><a href="#">Semper mod quisturpis</a></li>
+            <li><a href="#">Pomona-Pitzer Athletics</a></li>
+            <li><a href="#">Claremont-Mudd-Scripps Athletics</a></li>
+            <li><a href="#">Volleyball Organization</a></li>
           </ul>
         </section>
 
@@ -27,10 +19,11 @@
         <section>
           <h2>More Filler</h2>
           <ul class="divided">
-            <li><a href="#">Quam turpis feugiat dolor</a></li>
-            <li><a href="#">Amet ornare in in lectus</a></li>
-            <li><a href="#">Semper mod sed tempus nisi</a></li>
-            <li><a href="#">Consequat etiam phasellus</a></li>
+            <li><a href="#">Claremont McKenna College</a></li>
+            <li><a href="#">Scripps College</a></li>
+            <li><a href="#">Harvey Mudd College</a></li>
+            <li><a href="#">Pomona College</a></li>
+            <li><a href="#">Pitzer College</a></li>
           </ul>
         </section>
 
@@ -50,12 +43,8 @@
 
       <!-- About -->
         <section>
-          <h2><strong>ZeroFour</strong> by HTML5 UP</h2>
-          <p>Hi! This is <strong>ZeroFour</strong>, a free, fully responsive HTML5 site
-          template by <a href="http://n33.co/">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>.
-          It's <a href="http://html5up.net/license/">Creative Commons Attribution</a>
-          licensed so use it for any personal or commercial project (just credit us
-          for the design!).</p>
+          <h2>Claremont Volleyball is a 5C Organization.</h2>
+          <p></p>
           <a href="#" class="button alt icon fa-arrow-circle-right">Learn More</a>
         </section>
 
@@ -67,7 +56,7 @@
               <div class="6u 12u(mobile)">
                 <dl class="contact">
                   <dt>Twitter</dt>
-                  <dd><a href="#">@untitled-corp</a></dd>
+                  <dd><a href="#">@claremont-volleyball</a></dd>
                   <dt>Facebook</dt>
                   <dd><a href="#">facebook.com/untitled</a></dd>
                   <dt>WWW</dt>
