changed some photos and css

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,11 +58,11 @@
                   <dt>Twitter</dt>
                   <dd><a href="#">@claremont-volleyball</a></dd>
                   <dt>Facebook</dt>
-                  <dd><a href="#">facebook.com/untitled</a></dd>
+                  <dd><a href="#">facebook.com/claremontvolleyball</a></dd>
                   <dt>WWW</dt>
-                  <dd><a href="#">untitled.tld</a></dd>
+                  <dd><a href="#">claremontvolleyball.com</a></dd>
                   <dt>Email</dt>
-                  <dd><a href="#">user@untitled.tld</a></dd>
+                  <dd><a href="#">claremontvolleyball@gmail.com</a></dd>
                 </dl>
               </div>
               <div class="6u 12u(mobile)">
