added simon's calendar badass stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
             {% if page.url == node.url %}
                 class="current_page_item"
                {% endif %}
-          {% endfor %}><a href="/calendar/">Calendar</a></li>
+          {% endfor %}><a href="/calendar">Calendar</a></li>
           <li
           {% for node in site.pages %}
             {% if page.url == node.url %}
