changed announcements to directions

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,10 +44,10 @@
             class="current_page_item"
           {% endif %}><a href="/calendar">Calendar</a></li>
           <li
-          {% if page.url == "/announcement/index.html" %}
+          {% if page.url == "/directions/index.html" %}
             {{ page.url }}
             class="current_page_item"
-          {% endif %}><a href="/announcement">Announcement</a></li>
+          {% endif %}><a href="/directions">Directions</a></li>
         </ul>
       </nav>
 
