deleted simon photos and merged files. Also added new womens images folder

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,12 +17,12 @@
               {{ page.url }}
               class="current_page_item"
             {% endif %}>
-            <a href="#">Men's</a>
+            <a href="/mens">Men's</a>
             <ul>
               <li><a href="/mens">Home</a></li>
               <li><a href="#">Roster</a></li>
-              <li><a href="#">Schedule</a></li>
-              <li><a href="#">Announcement</a></li>
+              <li><a href="#">Photos</a></li>
+              <li><a href="#">Video</a></li>
             </ul>
           </li>
           <li
