fixed header a little

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
               <li><a href="womens/index.html">Home</a></li>
               <li><a href="#">Roster</a></li>
               <li><a href="#">Schedule</a></li>
-              <li><a href="#">Announcement</a></li>
+              <li><a href="#">Video</a></li>
             </ul>
           </li>
           <li
