--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
                 <ul>
                   <li><a href="womens/index.html">Home</a></li>
                   <li><a href="#">Roster</a></li>
-                  <li><a href="#">Schedule</a></li>
+                  <li><a href="#">Photos</a></li>
                   <li><a href="#">Video</a></li>
                 </ul>
               </li>
