edited header and footer stuff

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-md-4">
         <div class="widget">
           <div class="widget-inner">
-            <h3 class="widget-title">Arezzo Restaurant</h3>
+            <h3 class="widget-title">Claremont Volleyball</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
             <p><a href="#" class="more">Continue</a></p>
           </div><!-- end inner -->
@@ -37,7 +37,7 @@
       <div class="col-md-4">
         <div class="widget">
           <div class="widget-inner">
-            <h3 class="widget-title">Arezzo @ Instagram</h3>
+            <h3 class="widget-title">Claremont @ Instagram</h3>
             <ul class="list-galleries">
               <li>
                 <a href="#"><img src="images/content/ins-1.jpg" alt=""></a>
