--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
               {% endif %}>
                 <a href="#">Women's</a>
                 <ul>
-                  <li><a href="/womens/index.html">Home</a></li>
+                  <li><a href="/womens/">Home</a></li>
                   <li><a href="#">Roster</a></li>
                   <li><a href="#">Photos</a></li>
                   <li><a href="#">Video</a></li>
