added in calendar, fixed footer, and kangaroo logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,25 +37,25 @@
       <div class="col-md-4">
         <div class="widget">
           <div class="widget-inner">
-            <h3 class="widget-title">Claremont @ Instagram</h3>
+            <h3 class="widget-title">Claremont @ Albums</h3>
             <ul class="list-galleries">
               <li>
-                <a href="#"><img src="images/content/ins-1.jpg" alt=""></a>
+                <a href="#"><img src="/assets/images/footer/earl-spike.png" alt=""></a>
               </li>
               <li>
-                <a href="#"><img src="images/content/ins-2.jpg" alt=""></a>
+                <a href="#"><img src="/assets/images/footer/homeTourney5.png" alt=""></a>
               </li>
               <li>
-                <a href="#"><img src="images/content/ins-3.jpg" alt=""></a>
+                <a href="#"><img src="/assets/images/footer/homeTourney6.png" alt=""></a>
               </li>
               <li>
-                <a href="#"><img src="images/content/ins-4.jpg" alt=""></a>
+                <a href="#"><img src="/assets/images/footer/madison-spike.png" alt=""></a>
               </li>
               <li>
-                <a href="#"><img src="images/content/ins-5.jpg" alt=""></a>
+                <a href="#"><img src="/assets/images/footer/nationals-team.png" alt=""></a>
               </li>
               <li>
-                <a href="#"><img src="images/content/ins-6.jpg" alt=""></a>
+                <a href="#"><img src="/assets/images/content/ins-6.jpg" alt=""></a>
               </li>
             </ul>
           </div><!-- end inner -->
