--- a/css/style-2.css
+++ b/css/style-2.css
@@ -264,7 +264,7 @@ img.logo {
 
 #contact {
 	background-color: #111;
-	padding-top: 150px;
+	padding-top: 100px;
 	color: white;
 }
 
@@ -279,10 +279,11 @@ img.logo {
 
 .form-control {
 	background: rgba(255, 255, 255, 0.05);
-	border: 1px solid #fff;
+	border: 1px solid #faa41b;
 	border-radius: 10px;
 	-webkit-box-shadow: none;
 	box-shadow: none;
+    color: white;
 }
 
 ::-webkit-input-placeholder {
@@ -307,6 +308,9 @@ img.logo {
   	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(4, 115, 136, 0.6);
   	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(4, 115, 136, 0.6);
 }
+.form-control input, select, textarea {
+    color: white;
+}
 
 
 /* Footer */
@@ -328,12 +332,18 @@ footer {
 	.person {
 		margin-bottom: 40px;
 	}
+    img.logo {
+        width: 250px;
+    }
 }
 
 
 /* New classes and IDs */
 .usa-volleyball {
     width: 75px;
+}
+.kangaroo-pass {
+    height: 150px;
 }
 
 ::selection {
