added favicon and tap highlight

--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,11 @@ footer {
 
 ::selection {
   background: #faa41b; /* WebKit/Blink Browsers */
+    
 }
 ::-moz-selection {
   background: #faa41b; /* Gecko Browsers */
+}
+html {
+    -webkit-tap-highlight-color: #faa41b;
 }
