--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,84 +1,9 @@
-<footer id="footer-section" class="site-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="widget">
-          <div class="widget-inner">
-            <h3 class="widget-title">Claremont Volleyball</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-            <p><a href="#" class="more">Continue</a></p>
-          </div><!-- end inner -->
-        </div><!-- end widget -->
-      </div>
-
-      <div class="col-md-4">
-        <div class="widget">
-          <div class="widget-inner">
-            <h3 class="widget-title">Our Location</h3>
-            <p>Contact Information:</p>
-            <table>
-              <tr>
-                <td><strong>Address</strong></td>
-                <td> : 11 Sixth Ave, Portsmouth PO6 3PD, United Kingdom</td>
-              </tr>
-              <tr>
-                <td><strong>Phone</strong></td>
-                <td> : +44 (845) 345-8765</td>
-              </tr>
-              <tr>
-                <td><strong>E-mail</strong></td>
-                <td> : <a href="mailto:info@arezzorestaurant.com">info@arezzorestaurant.com</a></td>
-              </tr>
-            </table>
-          </div><!-- end inner -->
-        </div><!-- end widget -->
-      </div>
-
-      <div class="col-md-4">
-        <div class="widget">
-          <div class="widget-inner">
-            <h3 class="widget-title">Claremont @ Albums</h3>
-            <ul class="list-galleries">
-              <li>
-                <a href="#"><img src="/assets/images/footer/earl-spike.png" alt=""></a>
-              </li>
-              <li>
-                <a href="#"><img src="/assets/images/footer/homeTourney5.png" alt=""></a>
-              </li>
-              <li>
-                <a href="#"><img src="/assets/images/footer/homeTourney6.png" alt=""></a>
-              </li>
-              <li>
-                <a href="#"><img src="/assets/images/footer/madison-spike.png" alt=""></a>
-              </li>
-              <li>
-                <a href="#"><img src="/assets/images/footer/nationals-team.png" alt=""></a>
-              </li>
-              <li>
-                <a href="#"><img src="/assets/images/content/ins-6.jpg" alt=""></a>
-              </li>
-            </ul>
-          </div><!-- end inner -->
-        </div><!-- end widget -->
-      </div>
+<!-- Footer -->
+<footer>
+  <div class="row" data-scroll-reveal="wait 2.25s">
+    <div class="copyright">
+      <p>2016 © Claremont Volleyball</p>
     </div>
   </div>
 </footer>
-
-<div class="footer-credit">
-  <ul class="list-socmed">
-    <li>
-      <a href="#"><i class="fa fa-fw fa-facebook"></i></a>
-    </li>
-    <li>
-      <a href="#"><i class="fa fa-fw fa-twitter"></i></a>
-    </li>
-    <li>
-      <a href="#"><i class="fa fa-fw fa-linkedin"></i></a>
-    </li>
-    <li>
-      <a href="#"><i class="fa fa-fw fa-instagram"></i></a>
-    </li>
-  </ul>
-  <p class="copy">COPYRIGHT &copy; 2015 AREZZO RESTAURANT.</a></p>
-</div><!-- end footer-credit -->
+<!-- End Footer -->
