--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,18 @@
-<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="/assets//assets/js/vendor/jquery-1.11.1.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/assets/js/bootstrap.min.js"></script>
-<script src="/assets/js/plugin.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="js/jquery-1.11.0.min.js"></script>
+<script src='js/scrollReveal.js'></script>
+<script src="js/jquery-ui-1.10.4.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/config.js"></script>
+<script src="js/script.js"></script>
+<script src='js/jquery-scrollto.js'></script>
+<script src="js/countdown.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73487215-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
