changed captain2 photo

--- a/css/style.css
+++ b/css/style.css
@@ -257,8 +257,8 @@ img.logo {
 }
 
 #about .button {
-	border-color: #22ba7c;
-	color: #22ba7c;
+	border-color: #ea5a0d;
+	color: #ea5a0d;
 }
 /* CONTACT */
 
