--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,11 +1,12 @@
-<script src="js/jquery-1.11.0.min.js"></script>
-<script src='js/scrollReveal.js'></script>
-<script src="js/jquery-ui-1.10.4.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/config.js"></script>
-<script src="js/script.js"></script>
-<script src='js/jquery-scrollto.js'></script>
-<script src="js/countdown.js"></script>
+<script src="/js/jquery-2.2.4.min.js"></script>
+<script src='/js/scrollReveal.js'></script>
+<script src="/js/jquery-ui-1.10.4.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/config.js"></script>
+<script src='/js/jquery-scrollto.js'></script>
+<script src="/js/countdown.js"></script>
+<script src="/js/jquery.parallax-scroll.js"></script>
+<script src="/js/script.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
