--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,7 +5,7 @@
 <script src="/js/config.js"></script>
 <script src='/js/jquery-scrollto.js'></script>
 <script src="/js/countdown.js"></script>
-<script src="/js/jquery.parallax-scroll.js"></script>
+<script src="/js/jquery.parallax-scroll.min.js"></script>
 <script src="/js/script.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
