--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ body {
 	font-size: 16px;
 	font-weight: 300;
 	text-align: center;
+    overflow-x: hidden;   /* Don't need to show anything overflowing */
+
 }
 
 button {
@@ -338,20 +340,19 @@ footer {
     }
     
     .parallax {
-	background: url('../images/claremont-spike.png');
-	
-	background-position: -140px 8px; 
-	background-repeat: repeat;
-	background-size: cover;
-	height: 100%;
-	min-height: 600px;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	z-index: -999;
-}
-}
+        background: url('../images/claremont-spike.png');
 
+        background-position: -140px 8px; 
+        background-repeat: repeat;
+        background-size: cover;
+        height: 100%;
+        min-height: 600px;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: -999;
+    }
+}
 
 /* New classes and IDs */
 .usa-volleyball {
