edited footer added some more image alts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer>
   <div class="row" data-scroll-reveal="wait 2.25s">
     <div class="copyright">
-      <p>2016 © Claremont Volleyball</p>
+      <p>© 2016 Claremont Volleyball</p>
     </div>
   </div>
 </footer>
