--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <!-- Bootstrap -->
-<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 <!-- Main CSS -->
 <link href="/css/style.css" rel="stylesheet">
