--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,31 @@
+---
+---
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="The Claremont Colleges Volleyball Club Team is a DII organization competing for championships locally and nationally">
+    <meta name="keywords" content="volleyball, club, competitive, men, claremont, calremont, division II, college, claremont mckenna, harvey mudd, pomona, pitzer, championship, claremont mudd scripps, pomona pitzer">
+    <title>Claremont Colleges Club Volleyball - Home</title>
 
-  {% include head.html %}
-
+    {% include head.html %}
+  </head>
   <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+      {% include nav.html %}
+    {{ content }}
 
     {% include footer.html %}
 
-  </body>
+    <!-- Javascript Files -->
+    {% include scripts.html %}
 
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv-3.7.0.min.js"></script>
+      <script src="js/respond-1.4.2.min.js"></script>
+    <![endif]-->
+  </body>
 </html>
