added fullcalendar and qtip for calendar functionality and added 4 different calendars

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
 
 <!-- Main CSS -->
 <link href="/css/style.css" rel="stylesheet">
+<link href="/css/fullcalendar.css" rel="stylesheet">
+<link href="/css/jquery.qtip.css" rel="stylesheet">
 
 <!-- Google Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Lato:300,900' rel='stylesheet' type='text/css'>
