--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,27 +18,26 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mens <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/roster">Roster</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Schedule</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Stats</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">Videos</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Womens <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Roster</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Schedule</a></li>
+            <li><a href="#">Stats</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">Videos</a></li>
           </ul>
         </li>
-        <li><a href="#">Calendar</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/calendar">Calendar</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
