--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,6 +6,10 @@
 <script src='/js/jquery-scrollto.js'></script>
 <script src="/js/countdown.js"></script>
 <script src="/js/jquery.parallax-scroll.min.js"></script>
+<script src="/js/jquery.qtip.js"></script>
+<script src="/js/moment.min.js"></script>
+<script src="/js/fullcalendar.min.js"></script>
+<script src="/js/gcal.js"></script>
 <script src="/js/script.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
