edited roster and made some frontpage changes

--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ img.logo {
 }
 
 .parallax {
-	background: url('../images/claremont-spike.png');
+	background: url('../images/claremont-arizona-receive.jpg');
 	
 	background-position: center; 
 	background-repeat: repeat;
