--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,7 +36,13 @@
           </ul>
         </li>
         <li><a href="/calendar">Calendar</a></li>
-        <li><a href="/gallery">Gallery</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gallery <span class="caret"></span</a>
+            <ul class="dropdown-menu">
+                <li><a href="/gallery/2016-2017/">2016-2017</a></li>
+                <li><a href="/gallery/2015-2016/">2015-2016</a></li>
+            </ul>
+        </li>
         <li><a href="/contact">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
